# world-cup-intelligence

./: .env.example  .gitignore  README.md  plan.md  render.yaml
backend/: pyproject.toml
backend/artifacts/: match_model.joblib  match_model_metadata.json  penalty_model.joblib  penalty_model_metadata.json  xg_model.joblib  xg_model_metadata.json
backend/configs/tournaments/: world_cup_2026.yaml
backend/data/snapshots/: football_data_snapshot.json
backend/data/snapshots/players/: xg_profiles.json
backend/src/: index.py
backend/src/world_cup_intelligence/: __init__.py  config.py
backend/src/world_cup_intelligence/api/: main.py
backend/src/world_cup_intelligence/core/: __init__.py  logging.py  monitoring.py  settings.py
backend/src/world_cup_intelligence/data/: adapters.py  repository.py
backend/src/world_cup_intelligence/mlops/: __init__.py  evaluation.py  leakage.py  splits.py  tracking.py
backend/src/world_cup_intelligence/orchestration/: __init__.py  memory.py  workflows.py
backend/src/world_cup_intelligence/schemas/: __init__.py  api.py
backend/src/world_cup_intelligence/services/: elo.py  errors.py  model_runtime.py  penalty.py  predictor.py  refresh.py  simulation.py  system.py  tournament.py  training.py  xg.py
backend/tests/: test_api.py  test_elo.py  test_models.py  test_orchestration.py  test_settings.py  test_source_adapters.py  test_tournament_rules.py  test_training.py
docs/: architecture.md  deployment.md  models.md  project_memory.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+39 files in other folders)
