[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-intelligence-backend"
version = "0.1.0"
description = "Backend services and modeling utilities for World Cup Intelligence 2026"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "joblib>=1.4,<2.0",
  "numpy>=2.1,<3.0",
  "pydantic>=2.9,<3.0",
  "PyYAML>=6.0,<7.0",
  "scikit-learn>=1.5,<2.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mlflow>=2.17,<4.0",
  "pandas>=2.2,<3.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "requests>=2.32,<3.0",
  "ruff>=0.8,<1.0",
  "statsbombpy>=1.18,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
